# AIDA

./: .gitignore  Makefile  README.md  aida.bat  aida_planning.md  demo_plan.json  jarvis_system_prompt_example.md  pyproject.toml  run_aida.py  test_plan.json
aida/: __init__.py  api.py  assistant.py  cli.py  ics.py  models.py  planner.py  storage.py  timer.py
examples/: today.json
tests/: test_models.py  test_planner.py
